--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Бэкенд дипломной работы ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint .",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -34,6 +34,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-winston": "^4.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
